Refactor unit tests to new Packet classes